--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.pyc
-*/__pycache__/
-**/__pycache__/
-*/.idea/
-**/.idea/
-
+*__pycache__/
+**__pycache__/
+*.idea/
+**.idea/
+**.vscode/
+docs/scraper.py
